--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ ul li button {
   margin-bottom: 15px;
 }
 .card button {
-  margin-top: 10px;
+  margin-top: 20px;
 }
 .card .card-inputs {
   display: flex;
@@ -82,6 +82,12 @@ ul li button {
 }
 .card #todo-completed-update-div span {
   margin: 5px;
+}
+.card #todo-user-create-div {
+  width: 40%;
+}
+.card #todo-title-create-div {
+  width: 100%;
 }
 
 /*# sourceMappingURL=styles.css.map */
