ul color tareas hechas

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ ul {
   flex-direction: column;
   padding: 10px;
   width: 75%;
+  box-sizing: border-box;
 }
 ul li {
   box-sizing: border-box;
@@ -21,7 +22,7 @@ ul li:first-child span {
 }
 ul li span {
   box-sizing: border-box;
-  width: 22%;
+  width: 22.5%;
   padding: 10px;
   text-align: center;
   border-bottom: 1px solid #999;
@@ -30,7 +31,7 @@ ul li span:first-child {
   width: 10%;
 }
 ul li button {
-  width: 22%;
+  width: 22.5%;
   padding: 0;
   border: none;
   border-bottom: 1px solid #999;
@@ -88,6 +89,10 @@ ul li button {
 }
 .card #todo-title-create-div {
   width: 100%;
+}
+
+.done {
+  background-color: #c6ff75;
 }
 
 /*# sourceMappingURL=styles.css.map */
