--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,20 @@ body {
   display: flex;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
+  margin: 0;
+  background-color: #F0F0F0;
 }
 
 ul {
   list-style: none;
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 0;
   width: 75%;
   box-sizing: border-box;
+  background-color: white;
+  margin: 10px;
+  border: 1px solid #999;
 }
 ul li {
   box-sizing: border-box;
@@ -35,12 +40,14 @@ ul li button {
   padding: 0;
   border: none;
   border-bottom: 1px solid #999;
+  background-color: #cccccc;
 }
 
 .card {
   box-shadow: 0 0 5px #666;
   padding: 25px;
   margin: 25px;
+  background-color: white;
 }
 .card h1 {
   margin: 0;
