color botton mas lindo (?)

--- a/styles.scss
+++ b/styles.scss
@@ -42,7 +42,7 @@ ul {
             padding:0;
             border:none;
             border-bottom: 1px solid #999;
-            background-color: #cccccc;
+            background-color: #ebe9e9;
         }
     }
 }
