--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ ul li button {
   padding: 0;
   border: none;
   border-bottom: 1px solid #999;
-  background-color: #cccccc;
+  background-color: #ebe9e9;
 }
 
 .card {
