--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@ ul {
   display: flex;
   flex-direction: column;
   padding: 0;
-  width: 75%;
+  width: 65%;
   box-sizing: border-box;
   background-color: white;
   margin: 10px;
@@ -28,16 +28,19 @@ ul li:first-child span {
 }
 ul li span {
   box-sizing: border-box;
-  width: 22.5%;
+  width: 10%;
   padding: 10px;
   text-align: center;
   border-bottom: 1px solid #999;
 }
-ul li span:first-child {
-  width: 10%;
+ul li span:nth-child(2) {
+  width: 50%;
+}
+ul li span:nth-child(5) {
+  width: 20%;
 }
 ul li button {
-  width: 22.5%;
+  width: 20%;
   padding: 0;
   border: none;
   border-bottom: 1px solid #999;
@@ -45,7 +48,7 @@ ul li button {
 }
 
 .cards-container {
-  width: 30%;
+  width: 35%;
   margin: 30px;
 }
 
